--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,26 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="/style.css" /> 
+    <style>
+      html{
+      background: #EEE;
+      color: #333;
+      }
+      body{
+          margin: 0 auto 0 auto;
+          max-width: 600px;
+      }
+      .entry-title{
+          margin-bottom: 0;
+      }
+      .entry-date{
+          margin-top: 0;
+      }
+      #toc li a{
+          color: rgb(28, 65, 187);
+          text-decoration: none;
+      }
+    </style> 
     <title>{{ .Title }}</title>
   </head>  
   <body>
