--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -22,6 +22,9 @@
           color: rgb(28, 65, 187);
           text-decoration: none;
       }
+      pre{
+        overflow-x: auto;
+      }
     </style> 
     <title>{{ .Title }}</title>
   </head>  
