--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,29 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <style>
-      html{
-      background: #EEE;
-      color: #333;
-      }
-      body{
-          margin: 0 auto 0 auto;
-          max-width: 600px;
-      }
-      .entry-title{
-          margin-bottom: 0;
-      }
-      .entry-date{
-          margin-top: 0;
-      }
-      #toc li a{
-          color: rgb(28, 65, 187);
-          text-decoration: none;
-      }
-      pre{
-        overflow-x: auto;
-      }
-    </style> 
+    {{- partial "style.html" . -}}
     <title>{{ .Title }}</title>
   </head>  
   <body>
